# railbook

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.yml
.claude/commands/: add-endpoint.md  add-model.md  commit.md  fix-test.md  lint.md  sync-docs.md  test.md  validate.md
backend/: CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  redis.py  seed.py
backend/app/admin/: router.py  service.py
backend/app/audit/: service.py
backend/app/auth/: dependencies.py  router.py  schemas.py  service.py
backend/app/bookings/: cleanup.py  router.py  schemas.py  service.py
backend/app/demo/: router.py  service.py
backend/app/payments/: gateway.py
backend/app/ratelimit/: dependencies.py  limiter.py
backend/app/trains/: router.py  schemas.py  service.py
backend/migrations/: README.md  env.py
backend/migrations/versions/: 596377e27b70_initial_schema.py
backend/tests/: README.md  conftest.py  test_audit.py  test_auth.py  test_bookings.py  test_concurrency.py  test_journey_overlap.py  test_payments.py  test_rate_limit.py  test_refund.py  test_trains.py
docs/: CLAUDE.md  DIAGRAMS.md  README.md  railbook-excalidraw.json  railbook-plan.md
docs/api/: API_REFERENCE.md  ERROR_CODES.md
docs/architecture/: ARCHITECTURE.md  CONCURRENCY.md  DATABASE.md
frontend/: CLAUDE.md  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
loadtest/: CLAUDE.md  README.md  config.py  helpers.py  locustfile.py  requirements.txt  verify_integrity.py
(+26 files in other folders)
